# twip

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
app/: CMakeLists.txt  main.c
cmake/: toolchain-m4.cmake  utils.cmake
docker/: Dockerfile
hal/: .mxproject  CMakeLists.txt  Makefile  twip.ioc
hal/Core/Inc/: main.h  spi.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h
hal/Core/Src/: cordic.c  fmac.c  gpio.c  i2c.c  main.c  rtc.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  syscalls.c  sysmem.c  tim.c  usart.c
libs/cli/: CMakeLists.txt
libs/cli/inc/: cli.h
libs/cli/src/: cli.c  cli_callbacks.c  cli_callbacks.h
libs/control/: CMakeLists.txt
libs/control/inc/: control.h
libs/control/src/: control.c
libs/encoder/: CMakeLists.txt
libs/encoder/inc/: encoder.h  fir.h
libs/encoder/src/: encoder.c  fir.c
libs/fifo/: CMakeLists.txt
libs/fifo/inc/: fifo.h
libs/fifo/src/: fifo.c
libs/ina219/: CMakeLists.txt
libs/ina219/inc/: ina219.h  ina219_reg.h
libs/ina219/src/: ina219.c
libs/invensense9250/: CMakeLists.txt  algebra.c  algebra.h  algebra_common.c  algebra_common.h  invensense9250.c  invensense9250.h  matrix.c  matrix.h  mpu_defs.h  other.c  other.h  regs.h  vector.c  vector.h
libs/invensense9250/driver/eMPL/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c
libs/invensense9250/driver/include/: log.h
libs/invensense9250/driver/stm32G/: log_stm32.c
libs/invensense9250/mllite/: data_builder.c  ml_math_func.c
libs/logger/: CMakeLists.txt
libs/logger/inc/: logger.h
libs/logger/src/: logger.c
libs/madgwick/: CMakeLists.txt
libs/madgwick/src/: MadgwickAHRS.c
libs/mpu9250/: CMakeLists.txt
libs/mpu9250/inc/: algebra.h  algebra_common.h  filter.h  kalman.h  matrix.h  mpu9250.h  mpu9250_reg.h  other.h  polynomial.h  portme.h  quaternion.h  ring_buffer.h  vector.h
libs/mpu9250/src/: algebra.c  filter.c  kalman.c  matrix.c  mpu.c  mpu9250.c  other.c  polynomial.c  portme.c  quaternion.c  ring_buffer.c  vector.c
libs/uart/: CMakeLists.txt
libs/uart/inc/: uart.h
libs/uart/src/: uart.c
